# gemma3n_BCR_for_scam_dect

./: README.md  signing_env.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  setup_whisper.sh  whisper_jni.cpp
app/src/main/java/com/chiller3/bcr/: ModelManager.kt  Notifications.kt  RecorderApplication.kt  RecorderInCallService.kt  RecorderThread.kt  SpeechRecognitionThread.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
gradle/: libs.versions.toml  verification-metadata.xml
keystore/: release-key.jks
